grammar.js
		file: ($) =>
			seq(
				optional(seq($._header, $._end_newline)),
				repeat1(seq($._module_elem, $._end_newline)),
			),
		//TODO i could make a different version of this for when the module is an interface
		_module_elem: ($) =>
			choice(
				$.annotation_type_def,
				$.alias_type_def,
				$.nominal_type_def,
				$.expect,
				$.implements_definition,
				$.value_declaration,
				$.expr_body,
				$.import_expr,
				$.import_file_expr,
			),

		value_declaration: ($) =>
			prec(
				0,
				seq(
					//TODO i should be able to find a better solution that this silly /n
					optional(seq($.annotation_type_def, $._end_newline)),

					// $._newline,
					alias($._assigment_pattern, $.decl_left),
					"=",
					field("body", alias($.expr_body_terminal, $.expr_body)),
				),
			),

		expr_body: ($) =>
			choice(
				seq(
					$._indent,
					field(
						"declarations",
						repeat(
							choice(
								$.value_declaration,
								$.var_declaration,
								$.backpassing_expr,
								$.dbg_expr,
								$.bang_expr,
								$.for_expr,
							),
						),
					),
					field("result", $._expr_inner),
					$._dedent,
				),
				seq(
					repeat(choice($.value_declaration, $.var_declaration, $.backpassing_expr, $.dbg_expr, $.for_expr)),
					field("result", $._expr_inner),
				),
			),

		/**
		An expression body that should contain a newline after, like within a value declaration
		*/
		_call_or_atom: ($) => choice($.function_call_expr, $.method_call_expr, $.pipe_call_expr, $._atom_expr),
		_expr_inner: ($) =>
			choice(
				$.prefixed_expression,
				$.bin_op_expr,
				$._call_or_atom,
				$.import_expr,
				$.import_file_expr,
				$.return_expr,
			),

		// Prefix operators: ! (NOT) and - (negation)
		variable_expr: ($) => alias($.long_identifier, $.variable_expr),
		bin_op_expr: ($) =>
			field(
				"part",
				prec(
					PREC.PART,
					seq(
						$._call_or_atom,
						prec.right(repeat1(seq($.operator, $._call_or_atom))),
					),
				),
			),
		anon_fun_expr: ($) =>
			prec.left(
				seq(
					"|",
					optional($.argument_patterns),
					"|",
					choice($.block_body, $.expr_body),
					optional($._newline),
				),
			),

		// Block body with curly braces: { declarations... result }
		identifier_pattern: ($) => $.identifier,
		argument_patterns: ($) =>
			seq($._atomic_pattern, repeat(seq(",", $._atomic_pattern))),
		_atomic_pattern: ($) =>
			choice(
				"null",
				alias("_", $.wildcard_pattern),
				$.const,
				$.identifier_pattern,
				$.list_pattern,
				$.tuple_pattern,
				$.record_pattern,
				$.tag_pattern,
				$.range_pattern,
				seq("(", $._pattern, ")"),

				// :? atomic_type
			),
		_assigment_pattern: ($) =>
			choice(
				alias("_", $.wildcard_pattern),
				$.identifier_pattern,
				$.list_pattern,
				$.tuple_pattern,
				$.record_pattern,
			),

		_header: ($) =>
			choice(
				$.app_header,
				$.platform_header,
				$.module_header,
				$.package_header,
			),
		const: ($) =>
			choice(
				$.float,
				$.xint,
				$.decimal,
				$.natural,
				$.uint,
				$.iint,

				$.char,
				$.string,
				$.multiline_string,
				$.line_string,
				$.int,
				"false",
				"true",
				// $.unit,
			),

		//STRINGS
		string: ($) =>
			seq(
				'"',
				repeat(
					choice(imm(prec(0, /[^\n\\"]/)), $.interpolation_char, $.escape_char),
				),
				'"',
			),

		int: ($) => token(seq(/[0-9][0-9_]*/)),

		//ROC
		identifier: ($) => $._lower_identifier,
		_lower_identifier: ($) => /_?[a-z][0-9a-zA-Z_]*!?/,
		doc_comment: ($) => token(prec(-1, /##[^\n]*/)),
		line_comment: ($) => token(prec(-1, /#[^\n]*/)),

		operator: ($) => alias($.operator_identifier, $.operator),
