test/corpus/errors.txt
================================================================================
error_test_newline
================================================================================
a=
  b=10
--------------------------------------------------------------------------------

(ERROR
  (identifier_pattern
    (identifier))
  (value_declaration
    (decl_left
      (identifier_pattern
        (identifier)))
    (expr_body
      (const
        (int)))))

================================================================================
error_string
================================================================================
bbba= " hi there
a=10
b= "other string"

--------------------------------------------------------------------------------

(file
  (value_declaration
    (decl_left
      (identifier_pattern
        (identifier)))
    (expr_body
      (const
        (string
          (MISSING """)))))
  (value_declaration
    (decl_left
      (identifier_pattern
        (identifier)))
    (expr_body
      (const
        (int))))
  (value_declaration
    (decl_left
      (identifier_pattern
        (identifier)))
    (expr_body
      (const
        (string)))))
